# ksp1

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md  install.sh  meson.build  meson_options.txt  uninstall.sh  wscript
experimental/: Articulation.cpp  Articulation.h  BeatThangKitLoader.h  BeatThangPatternLoader.h  ContentScanner.cpp  ContentScanner.h  Controller.cpp  Controller.h  DataPath.cpp  DataPath.h  Database.cpp  Database.h  Filesystem.cpp  Filesystem.h  Forge.h  H2DrumkitLoader.h  Instrument.cpp  Instrument.h  InstrumentLoader.h  KSP1.h  KeyItem.cpp  LayerItem.cpp  Locations.cpp  Locations.h  MediaLibrary.cpp  MediaLibrary.h  MediaObject.h  Monitor.h  PatternClip.h  PatternLoader.h  PortWriter.cpp  PortWriter.h  PortWriterInterface.cpp  PortWriterInterface.h  Ports.h  SamplerInterface.cpp  SamplerInterface.h  StandardLoader.h  StrokeType.h  Types.h  (+3 more)
experimental/editor/: AmpControls.cpp  AmpControls.h  AssetsListBox.cpp  AssetsListBox.h  AudioPeaks.cpp  AudioPeaks.h  Banks.h  BrowseScreen.cpp  BrowseScreen.h  ComponentMixin.h  DisplayView.cpp  DisplayView.h  EditScreen.cpp  EditScreen.h  FilterControls.cpp  FilterControls.h  Keyboard.cpp  Keyboard.h  LV2Editor.cpp  LV2Editor.h  LayerCell.cpp  LayerCell.h  LayersListBox.cpp  LayersListBox.h  LevelMeter.cpp  LevelMeter.h  MenuButton.h  MidiFilterScreen.cpp  MidiFilterScreen.h  MidiKeyboardComponent.cpp  MidiKeyboardComponent.h  MidiNoteSliderPropertyComponent.h  PanelButton.h  Panels.h  PianoRoll.cpp  PianoRoll.h  ProgramEditor.cpp  ProgramEditor.h  ProgramsListBox.cpp  ProgramsListBox.h  (+19 more)
experimental/engine/: ADSR.h  Articulator.h  LayerData.cpp  LowPassFilter.cpp  Sampler.h  SamplerKeys.h  SamplerSounds.cpp  SamplerSynth.cpp  SamplerSynth.h  SamplerVoice.cpp  SqlQuery.h
jucer/: KSP1.jucer
jucer/JuceLibraryCode/: AppConfig.h  JuceHeader.h
jucer/LV2/: KSP1.ttl  manifest.ttl
jucer/Source/: DirectInterface.cpp  DirectInterface.h  KSP1.cpp  PluginConfig.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SamplerEditor.cpp  SamplerEditor.h  SamplerPluginView.cpp  SamplerPluginView.h  SamplerProcessor.cpp  SamplerProcessor.h  Standalone.cpp
jucer/Templates/: GuiTemplate.cpp  GuiTemplate.h
kits/sn-r8-04/: index.json  meson.build
kits/sn-r8-11/: index.json  meson.build
libs/sqlite3/: readme.txt
meson/: msvc.ini
src/: Articulation.cpp  Articulation.h  BeatThangPatternLoader.h  CMakeLists.txt  ContentScanner.cpp  ContentScanner.h  Controller.h  DataPath.cpp  DataPath.h  Database.cpp  Database.h  Filesystem.cpp  Filesystem.h  Forge.h  Instrument.cpp  Instrument.h  InstrumentLoader.cpp  InstrumentLoader.h  KSP1.h  KeyItem.cpp  LV2Plugin.cpp  LV2Plugin.h  LayerItem.cpp  Locations.cpp  Locations.h  MediaLibrary.h  MediaObject.h  Monitor.h  MutableAtom.h  PatternClip.h  PortWriter.h  PortWriterInterface.cpp  PortWriterInterface.h  Programming.cpp  Programming.h  SamplerInterface.cpp  SamplerInterface.h  StandardLoader.h  StrokeType.h  Types.h  (+41 more)
src/editor/: AmpControls.cpp  AmpControls.h  ArticulationControls.cpp  ArticulationControls.h  AssetsListBox.cpp  AssetsListBox.h  AudioPeak.h  AudioPeaks.cpp  AudioPeaks.h  Banks.h  BrowseScreen.cpp  BrowseScreen.h  ComponentMixin.h  DisplayView.cpp  DisplayView.h  EditScreen.cpp  EditScreen.h  FilterControls.cpp  FilterControls.h  Keyboard.cpp  Keyboard.h  LV2Editor.cpp  LV2Editor.h  LayerCell.cpp  LayerCell.h  LayersListBox.cpp  LayersListBox.h  LevelMeter.h  MenuButton.h  MidiFilterScreen.cpp  MidiFilterScreen.h  MidiKeyboardComponent.cpp  MidiKeyboardComponent.h  PanelButton.h  Panels.h  PianoRoll.cpp  PianoRoll.h  ProgramEditor.cpp  ProgramEditor.h  ProgramsListBox.cpp  (+20 more)
src/engine/: ADSR.cpp  ADSR.h  Articulator.cpp  Articulator.h  Disposable.h  Jobs.cpp  Jobs.h  LV2Plugin.cpp  LV2Plugin.h  LayerData.cpp  LayerData.h  LayeringMode.h  LowPassFilter.cpp  LowPassFilter.h  MidiFilter.h  SampleCache.cpp  SampleCache.h  SamplerKeys.h  SamplerSounds.cpp  SamplerSounds.h  SamplerSynth.cpp  SamplerSynth.h  SamplerVoice.cpp  SamplerVoice.h
standalone/: KSP1 Standalone.jucer
standalone/JuceLibraryCode/: AppConfig.h  JuceHeader.h
standalone/Source/: AppController.cpp  AppController.h  AudioEngine.cpp  AudioEngine.h  AudioGraph.h  Commands.h  ControllerBase.h  Main.cpp  MainWindow.h  World.cpp  World.h
subprojects/: .gitignore
tools/: KSP1.trak
tools/macdeploy/: Info-Standalone.plist
tools/waf/: apple.py  audiounit.py  juce.py  ksp1.py  products.py
