sn_r8_04_files = [
    'index.json',
    'Folder.jpg',
    'R-8808 conga.wav',
    'R-8808 cowbell.wav',
    'R-8808 maracas.wav',
    'R-8flange k.wav',
    'R-8elec ride bell.wav',
    'R-8high q.wav',
    'R-8808 k.wav',
    'R-8808s stick.wav',
    'R-8808 clave.wav',
    'R-8elec crash.wav',
    'R-8slap2.wav',
    'R-8elec k.wav',
    'R-8elec s.wav',
    'R-8elec tom.wav',
    'R-8808 hh c.wav',
    'R-8flange s.wav',
    'R-8rap noise.wav',
    'R-8808 hh o.wav',
    'R-8808 tom.wav',
    'R-8synth bass.wav',
    'R-8808 ride.wav',
    'R-8reverb s2.wav',
    'R-8808 s.wav',
    'R-8cntrl k.wav',
    'R-8wood box.wav',
    'R-8bend tom.wav'
]

foreach f : sn_r8_04_files
    configure_file (
        input : f,
        output : f,
        copy : true,
        install : true,
        install_dir : bundledir / 'kits' / 'sn-r8-04'
    )
endforeach
