sn_r8_11_files = [
    'index.json',
    'Folder.jpg',
    'R8 Chime.wav',
    'R8 Bell CYM 2.wav',
    'R8 Crash CYM 7.wav',
    'R8 Short Chinese CYM.wav',
    'R8 Crash CYM 8.wav',
    'R8 OHH 3.wav',
    'R8 CHH 2.wav',
    'R8 Crash CYM 6.wav',
    'R8 Ride Bell CYM 2.wav',
    'R8 Cowbell 3.wav',
    'R8 Spoons.wav',
    'R8 Pedal CHH 2.wav',
    'R8 Slay Bell.wav',
    'R8 Bowl.wav',
    'R8 OHH 2.wav',
    'R8 Can 2.wav',
    'R8 RNB CRS.wav',
    'R8 Pedal CHH 3.wav',
    'R8 Hand CYM 1.wav',
    'R8 Splash CYM 3.wav',
    'R8 Flex Tone.wav',
    'R8 Ride CYM 2.wav',
    'R8 Steel Lite Drum.wav',
    'R8 Mute Maracas.wav',
    'R8 CHH 3.wav',
    'R8 Mute Castanets.wav'
]

foreach f : sn_r8_11_files
    configure_file (
        input : f,
        output : f,
        copy : true,
        install : true,
        install_dir : bundledir / 'kits' / 'sn-r8-11'
    )
endforeach
